tests/diagnostics/push_str_immutable.stderr
error[E0263]: push_str の第 1 引数は可変な場所である必要があります (`let mut s` で宣言してください)
 --> tests/diagnostics/push_str_immutable.kal:2:41
  |
2 | { let s: String = string("a"); push_str(s, "b"); };
  |                                         ^
1 個のエラーで中断しました
