tests/diagnostics/push_str_immutable.kal
# push_str needs a mutable String (declared `let mut`).
{ let s: String = string("a"); push_str(s, "b"); };
